--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo-container">
             <a href="/index.html">
-                <img src="./assets/image/logo ordi.jpg" alt="logo ordi">
+                <img src="./assets/image/logo-ordi.jpg" alt="logo ordi">
             </a>
         </div>
         <div>
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <div class="burger-img">
-                <img src="./assets/image/logo menu.svg" alt="">
+                <img src="./assets/image/logo-menu.svg" alt="">
             </div>
         </div>
     </header>
@@ -39,7 +39,7 @@
         <h1>Le développement web expliqué à ta mamie</h1>
         <section class="first-section">
             <div class="photo">
-                <img src="./assets/image/photo developpement web.jpg" alt="ligne de code">
+                <img src="./assets/image/photo-developpement-web.jpg" alt="ligne de code">
             </div>
             <div class="first-text">
                 <h2>Le développement web, qu'est ce que c'est ?</h2>
@@ -51,7 +51,7 @@
         </section>
         <section class="second-section">
             <div class="photo">
-                <img src="./assets/image/photo developpeur web.jpg" alt="personne entrain de développer">
+                <img src="./assets/image/photo-developpeur-web.jpg" alt="personne entrain de développer">
             </div>
             <div class="second-text">
                 <h2>Le développeur web, qui est-ce ?</h2>
@@ -61,7 +61,7 @@
         </section>
         <section class="tree-section">
             <div class="photo">
-                <img src="./assets/image/photo language.jpg" alt="shéma de language html css js">
+                <img src="./assets/image/photo-language.jpg" alt="shéma de language html css js">
             </div>
             <div class="tree-text">
                 <h2>Les languages courament utilisé</h2>
@@ -75,82 +75,65 @@
         <section class="link-logo">
             <div>
                 <a href="./pages/explicationhtml.html">
-                    <img src="./assets/image/logo html.svg" alt="html">
+                    <img src="./assets/image/logo-html.svg" alt="html">
                 </a>
                 <h3>HTML</h3>
             </div>
             <div>
                 <a href="./pages/explicationcss.html">
-                    <img src="./assets/image/logo css.svg" alt="css">
+                    <img src="./assets/image/logo-css.svg" alt="css">
                 </a>
                 <h3>CSS</h3>
             </div>
             <div>
                 <a href="./pages/explicationjs.html">
-                    <img src="./assets/image/logo js.svg" alt="js">
+                    <img src="./assets/image/logo-js.svg" alt="js">
                 </a>
                 <h3>JavaScript</h3>
             </div>
             <div>
                 <a href="./pages/explicationphp.html">
-                    <img src="./assets/image/logo php.svg" alt="php">
+                    <img src="./assets/image/logo-php.svg" alt="php">
                 </a>
                 <h3>PHP</h3>
             </div>
         </section>
     </main>
     <footer>
-        <h4>Formulaire de contact</h4>
+        <section class="contact">
+            <h4>Nous contacter</h4>
+            <p>155 Rue du Dirigeable, <br> 13400 Aubagne</p>
+            <a href="tel:0683791783"> Téléphone: 06 83 79 17 83</a>
+            <a href="mailto:contact@ri7.fr">mail: contact@ri7.fr</a>
+            <div class="social-media">
+                <a href="https://www.facebook.com/">
+                    <img src="./assets/image/facebook.png" alt="">
+                </a>
+                <a href="https://www.youtube.com/">
+                    <img src="./assets/image/youtube.png" alt="">
+                </a>
+                <a href="https://www.instagram.com/zeraldo_/">
+                    <img src="./assets/image/instagram.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/chlo%C3%A9-pieront-9a249021a/">
+                    <img src="./assets/image/linkedin.png" alt="">
+                </a>
+            </div>
+        </section>
         <section class="formulaire">
-            <article>
-                <div>
-                    <p><strong>Nom</strong></p>
-                    <input type="text">
-                    <p><strong>Prénom</strong></p>
-                    <input type="text">
-                </div>
-                <div class="espace">
-                    <p><strong>Sexe</strong></p>
-                    <input type="radio" name="sexe" id="homme">
-                    <label for="m">Homme</label>
-                    <input type="radio" name="sexe" id="femme">
-                    <label for="f">Femme</label>
-                    <input type="radio" name="sexe" id="autre">
-                    <label for="a">Autre</label>   
-                </div>
-            </article>
-            <article>
-                <div>
-                    <strong><label for="pays">Pays</label></strong>
-                    <select id="pays">
-                        <option value="1">Grande-bretagne</option>
-                        <option value="2">France</option>
-                        <option value="3">Espagne</option>
-                        <option value="4">Italie</option>
-                        <option value="5">Belgique</option>
-                        <option value="6">Suède</option>
-                        <option value="7">Norvège</option>
-                        <option value="8">Allemagne</option>
-                        <option value="9">Hollande</option>
-                        <option value="10">Portugal</option>
-                        <option value="11">Pologne</option>
-                        <option value="12">Danemark</option>
-                    </select>
-                </div>
-                <div>
-                    <p><strong>Avez vous un métier un métier en rapport avec le monde du numérique ? Si oui indiquer le nous.</strong></p>
-                    <input type="radio">
-                    <label for="yes">Oui</label>
-                    <input type="radio">
-                    <label for="no">Non</label>
-                </div>
-                <div class="metier">
-                    <input type="text">
-                </div>
-                <div class="envoie">
-                    <button>Envoyer les données</button>
-                </div>
-            </article>
+            <h4>Si vous voulez un renseignement, compléter ceci</h4>
+            <div>
+                <form action="#" method="post">
+                    <input type="text" placeholder="Nom" />
+                </form>
+                <form action="#" method="post">
+                    <input type="text" placeholder="Prénom" />
+                </form>
+                <form action="#">
+                    <textarea class="area-contact" name="messages" placeholder="Posez vos question"></textarea>
+                </form>
+            </div>
+            <button class="envoie">Soumettre</button>
         </section>
     </footer>
 </body>
