--- a/pages/explicationhtml.html
+++ b/pages/explicationhtml.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo-container">
             <a href="/index.html">
-                <img src="../assets/image/logo ordi.jpg" alt="logo ordi">
+                <img src="../assets/image/logo-ordi.jpg" alt="logo ordi">
             </a>
         </div>
         <div>
@@ -31,19 +31,19 @@
                 </ul>
             </nav>
             <div class="burger-img">
-                <img src="../assets/image/logo menu.svg" alt="">
+                <img src="../assets/image/logo-menu.svg" alt="">
             </div>
         </div>
     </header>
     <main>
         <div class="logo-html">
-            <img src="../assets/image/logo html (2).png" alt="">
+            <img src="../assets/image/logo-html(2).png" alt="">
         </div>
-        <section>
+        <section class="blabla">
             <article>
                 <h1>Qu'est ce que c'est le language HTML ?</h1>
                 <p>Langage de balisage : HTML utilise des balises pour décrire différents types de contenu. Chaque balise a une fonction spécifique, comme structurer des titres, des paragraphes, des images ou des liens.</p>
-                <p>Structure hiérarchique : HTML est organisé de manière hiérarchique. Une page HTML commence par une déclaration de type, suivie d'éléments &lthtml&gt, &lthead&gt, et &ltbody&gt, ce qui permet de séparer les métadonnées du contenu visible.</p>
+                <p>Structure hiérarchique : HTML est organisé de manière hiérarchique. Une page HTML commence par une déclaration de type, suivie d'éléments &lt;html&gt;, &lt;head&gt;, et &lt;body&gt;, ce qui permet de séparer les métadonnées du contenu visible.</p>
                 <p>Compatibilité : HTML est pris en charge par tous les navigateurs web, ce qui le rend essentiel pour la création de sites accessibles à tous.</p>
                 <p>Interactivité et intégration : Bien que HTML ne gère pas l'interactivité par lui-même, il peut être complété par CSS (pour le style) et JavaScript (pour les comportements dynamiques), permettant ainsi de créer des expériences utilisateur riches.</p>
                 <p>Évolution : HTML a évolué au fil du temps, avec des versions révisées qui ont introduit de nouvelles balises et fonctionnalités. La version la plus récente, HTML5, a ajouté des éléments pour le multimédia, la géolocalisation et bien d'autres</p>
@@ -51,10 +51,10 @@
             <article>
                 <h1>À quoi ça sert ?</h1>
                 <p>HTML est utilisé pour:</p>
-                <p>Structurer le contenu d’un site web, avec des balises de titres &lth1&gt à &lth6&gt, les paragraphes avec les balises &ltp&gt, des listes &ltul&gt désordonées et des listes &ltol&gt ordonées</p>
-                <p>HTML facilite l'intégration d'éléments multimédias comme: <br> images: Avec la balise &ltimg&gt. <br> vidéos: Avec les balises &ltvideo&gt et &ltaudio&gt.</p>
-                <p>Créer des hyperliens grâce à la balise &lta&gt, permettant aux utilisateurs de naviguer entre différentes pages ou ressources en ligne.</p>
-                <p>Créer des formulaires pour collecter des données auprès des utilisateurs, en utilisant des balises comme &ltform&gt, &ltinput&gt, &ltselect&gt, etc.</p>
+                <p>Structurer le contenu d’un site web, avec des balises de titres &lt;h1&gt; à &lt;h6&gt;, les paragraphes avec les balises &lt;p&gt;, des listes &lt;ul&gt; désordonées et des listes &lt;ol&gt; ordonées</p>
+                <p>HTML facilite l'intégration d'éléments multimédias comme: <br> images: Avec la balise &lt;img&gt;. <br> vidéos: Avec les balises &lt;video&gt; et &lt;audio&gt;.</p>
+                <p>Créer des hyperliens grâce à la balise &lt;a&gt;, permettant aux utilisateurs de naviguer entre différentes pages ou ressources en ligne.</p>
+                <p>Créer des formulaires pour collecter des données auprès des utilisateurs, en utilisant des balises comme &lt;form&gt;, &lt;input&gt;, &lt;select&gt;, etc.</p>
                 <p>HTML structure le contenu de manière à ce qu'il soit accessible aux moteurs de recherche et aux technologies d'assistance, améliorant ainsi le référencement (SEO) et l'accessibilité pour les personnes ayant des handicaps.</p>
                 <p>Bien que HTML ne gère pas l'interactivité de manière native, il peut être utilisé avec CSS (pour le style) et JavaScript (pour les fonctionnalités dynamiques) pour créer des expériences web plus riches.</p>
             </article>
@@ -65,65 +65,48 @@
         </section>
         <div class="arrow">
             <a href="/pages/explicationphp.html">
-                <img src="../assets/image/arrow back.svg" alt="">
+                <img src="../assets/image/arrow-back.svg" alt="">
             </a>
             <a href="/pages/explicationcss.html">
-                <img src="../assets/image/arrow forward.svg" alt="">
+                <img src="../assets/image/arrow-forward.svg" alt="">
             </a>
         </div>
     </main>
     <footer>
-        <h4>Formulaire de contact</h4>
+        <section class="contact">
+            <h4>Nous contacter</h4>
+            <p>155 Rue du Dirigeable, <br> 13400 Aubagne</p>
+            <a href="tel:0683791783"> Téléphone: 06 83 79 17 83</a>
+            <a href="mailto:contact@ri7.fr">mail: contact@ri7.fr</a>
+            <div class="social-media">
+                <a href="https://www.facebook.com/">
+                    <img src="../assets/image/facebook.png" alt="">
+                </a>
+                <a href="https://www.youtube.com/">
+                    <img src="../assets/image/youtube.png" alt="">
+                </a>
+                <a href="https://www.instagram.com/zeraldo_/">
+                    <img src="../assets/image/instagram.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/chlo%C3%A9-pieront-9a249021a/">
+                    <img src="../assets/image/linkedin.png" alt="">
+                </a>
+            </div>
+        </section>
         <section class="formulaire">
-            <article>
-                <div>
-                    <p><strong>Nom</strong></p>
-                    <input type="text">
-                    <p><strong>Prénom</strong></p>
-                    <input type="text">
-                </div>
-                <div class="espace">
-                    <p><strong>Sexe</strong></p>
-                    <input type="radio" name="sexe" id="homme">
-                    <label for="m">Homme</label>
-                    <input type="radio" name="sexe" id="femme">
-                    <label for="f">Femme</label>
-                    <input type="radio" name="sexe" id="autre">
-                    <label for="a">Autre</label>   
-                </div>
-            </article>
-            <article>
-                <div>
-                    <strong><label for="pays">Pays</label></strong>
-                    <select id="pays">
-                        <option value="1">Grande-bretagne</option>
-                        <option value="2">France</option>
-                        <option value="3">Espagne</option>
-                        <option value="4">Italie</option>
-                        <option value="5">Belgique</option>
-                        <option value="6">Suède</option>
-                        <option value="7">Norvège</option>
-                        <option value="8">Allemagne</option>
-                        <option value="9">Hollande</option>
-                        <option value="10">Portugal</option>
-                        <option value="11">Pologne</option>
-                        <option value="12">Danemark</option>
-                    </select>
-                </div>
-                <div>
-                    <p><strong>Avez vous un métier un métier en rapport avec le monde du numérique ? Si oui indiquer le nous.</strong></p>
-                    <input type="radio">
-                    <label for="yes">Oui</label>
-                    <input type="radio">
-                    <label for="no">Non</label>
-                </div>
-                <div class="metier">
-                    <input type="text">
-                </div>
-                <div class="envoie">
-                    <button>Envoyer les données</button>
-                </div>
-            </article>
+            <h4>Si vous voulez un renseignement, compléter ceci</h4>
+            <div>
+                <form action="#" method="post">
+                    <input type="text" placeholder="Nom" />
+                </form>
+                <form action="#" method="post">
+                    <input type="text" placeholder="Prénom" />
+                </form>
+                <form action="#">
+                    <textarea class="area-contact" name="messages" placeholder="Posez vos question"></textarea>
+                </form>
+            </div>
+            <button class="envoie">Soumettre</button>
         </section>
     </footer>
 </body>
